<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ugckit_shape_input_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/confirm_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/ugckit_fragment_confirm_confirm"
            android:textColor="@color/ugckit_black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/confirm_et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:text="@string/ugckit_fragment_confirm_input_tip"
            android:textColor="@color/ugckit_black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/confirm_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/ugckit_fragment_bgm_cancel"
                android:textColor="@color/ugckit_input_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/confirm_tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/ugckit_fragment_confirm_ok"
                android:textColor="@color/ugckit_input_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>