<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ugckit_shape_input_background"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/word_et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/ugckit_fragment_input_word_input_tip"
            android:gravity="left|top"
            android:minHeight="100dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/word_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/ugckit_fragment_input_word_cancel"
                android:textColor="@color/ugckit_color_gray4"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/word_tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/ugckit_fragment_input_word_ok"
                android:textColor="@color/ugckit_input_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>