<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionLeftRightIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ugckit_picture_join_left_right"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionUpDownIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition2"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ugckit_picture_join_up_down"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionEnlargeIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition3"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ugckit_picture_join_zoom_in"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionNarrowIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition4"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ugckit_picture_join_zoom_out"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionRotateIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition5"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/ugckit_picture_join_rotate"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/transition6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="?attr/transitionFadeInOutIcon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transition6"
            android:layout_centerHorizontal="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:text="@string/ugckit_picture_join_fade_in_and_fade_out"
            android:textColor="@color/ugckit_white"
            android:textSize="12dp" />

    </RelativeLayout>
</LinearLayout>